[package]
name = "mech-random"
version = "0.0.5"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Random number generator library for the Mech language"
documentation = "http://docs.mech-lang.org"
homepage = "http://mech-lang.org"
repository = "https://github.com/mech-lang/random"
keywords = ["mech", "language", "programming"]
license = "Apache-2.0"
readme = "README.md"

[badges]
gitlab = { repository = "mech-lang/random", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
mech-core = {git = "https://gitlab.com/mech-lang/core"}
mech-utilities = {git = "https://gitlab.com/mech-lang/utilities"}

lazy_static = "1.4.0"
oorandom = "11.1.3"